# plint

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  feature.md  rule-proposal.md
.github/actions/plint/: action.yml
.github/workflows/: plint.yml
examples/: runtime_demo.py
examples/bad_agent/prompts/: system.md
examples/bad_agent/skills/general/: README.md  SKILL.md
examples/bad_agent/skills/general/scripts/utils/db/: big.py
examples/bad_agent/tools/: mega_tool.json
examples/good_agent/prompts/: system.md
examples/good_agent/skills/onboard-client/: SKILL.md
examples/good_agent/tools/: tools.json
src/plint/: __init__.py  cli.py
src/plint/core/: artifacts.py  config.py  findings.py  policy.py
src/plint/loaders/: __init__.py  _frontmatter.py  discover.py  prompts.py  skills.py  tools.py
src/plint/report/: __init__.py  json_report.py  sarif.py  text.py
src/plint/runtime/: confusion_judge.py  session.py  trace.py
src/plint/runtime/detectors/: __init__.py  hedging.py  skill_unused.py  tool_arg_drift.py  tool_loop.py  tool_orphan.py  tool_oscillation.py
src/plint/runtime/instrument/: __init__.py  _patch.py  anthropic.py  openai.py
src/plint/static/: analyzer.py  judge.py
src/plint/static/heuristics/: __init__.py  _base.py  prompt_anthropic.py  prompt_length.py  prompt_procedural.py  prompt_repetition.py  prompt_swears.py  separation_overlap.py  skill_anthropic.py  skill_frontmatter.py  skill_specificity.py  skill_strict.py  tool_description.py  tool_quality.py  tool_workflow.py  xlayer_determinism.py
