[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plint"
version = "0.1.0"
description = "Static and runtime linter for agent prompts, skills, and tool definitions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dan" }]
keywords = ["llm", "agents", "prompt", "skills", "tools", "linter", "anthropic", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
all = ["anthropic>=0.40", "openai>=1.40"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
plint = "plint.cli:app"

[project.urls]
Homepage = "https://github.com/your-org/plint"
Issues = "https://github.com/your-org/plint/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/plint"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
